pending balance completed

--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -42,3 +42,16 @@
 div:has(>.min-w-130px) {
     min-width: 130px;
 }
+
+::-webkit-calendar-picker-indicator {
+    background: transparent;
+    bottom: 0;
+    color: transparent;
+    cursor: pointer;
+    height: auto;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: auto;
+}
