repo rts, pending balance settlement, calender view and export to excel

--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -43,6 +43,10 @@ div:has(>.min-w-130px) {
     min-width: 130px;
 }
 
+.hbotQl{
+    white-space: normal!important;
+}
+
 ::-webkit-calendar-picker-indicator {
     background: transparent;
     bottom: 0;
